fix url tag jobs and subscribe box popup on mobile

--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -574,6 +574,10 @@ footer{
 		left: 50%;
 		margin-left: -(span(3)/2);
 		z-index: 9;
+		@include susy-breakpoint($small-range, $susy-small){
+			width: span(4);
+			margin-left: -(span(4)/2);
+		}
 	}
 	&__backdrop{
 		position: absolute;
