--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1243,6 +1243,13 @@ footer .logo a {
   z-index: 9;
 }
 
+@media (min-width: 0em) and (max-width: 47.9375em) {
+  .popup #mc_embed_signup {
+    width: 92.1052631579%;
+    margin-left: -46.0526315789%;
+  }
+}
+
 .popup__backdrop {
   position: absolute;
   top: 0;
